jg/coop/css/content/_jobs.scss
.jobs-list {
  @extend .list-unstyled;
  margin-bottom: $spacer;
}

.jobs-item {
  position: relative;
  display: flex;
  align-items: flex-start;
  justify-content: start;
  padding: $spacer;
  margin-bottom: $spacer;
  background-color: $jg-blue-light;
  border: 1px solid $jg-blue-light;
  border-radius: $border-radius;
}

.jobs-item.highlighted {
  background-color: $jg-yellow-light;
  border-color: $jg-yellow;
}

.jobs-logo {
  flex-grow: 0;
  flex-shrink: 0;
  padding: .25rem;
  margin-right: $spacer;
  background: $jg-white;
  border: 1px solid $border-color;
  border-radius: $border-radius;
}

.jobs-image {
  display: block;
  width: map-get($spacers, 5);
  height: map-get($spacers, 5);
}

.jobs-title {
  @extend .fs-5;
  color: $jg-blue;
}

.jobs-title-link {
  text-decoration: none;
  @extend .stretched-link;
}

.jobs-item:hover .jobs-title-link {
  text-decoration: underline;
}

.jobs-info {
  display: flex;
  flex-wrap: wrap;
}

.jobs-info-item {
  width: 100%;
  padding-right: $spacer;
  text-wrap: nowrap;

  @include media-breakpoint-up(sm) {
    width: auto;
  }
}

.jobs-tag {
  @extend .badge;
  color: $jg-dark;
  background: $jg-white;
}

.jobs-source {
  @extend .small;
  margin-bottom: 0;
}

